force-app/main/default/objects/ID_Profile__c/ID_Profile__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>ID - Profile</label>
</CustomObject>