force-app/main/default/objects/ID_Profile__c/fields/ID_Profile_System_Admin__c.field-meta.xml
<CustomField>
    <fullName>ID_Profile_System_Admin__c</fullName>
    <label>ID Profile System Admin</label>
    <length>18</length>
    <type>Text</type>
</CustomField>