force-app/main/default/objects/ID_Profile__c/fields/ID_Profile_VV_Team__c.field-meta.xml
<CustomField>
    <fullName>ID_Profile_VV_Team__c</fullName>
    <label>ID Profile VV Team</label>
    <length>18</length>
    <type>Text</type>
</CustomField>